fix: stretch items

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -75,6 +75,7 @@
 .sbb-card {
   display: flex;
   flex-direction: column;
+  align-items: stretch;
   position: relative;
   overflow: hidden;
   width: 100%;
